# mcp-base

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS.md  README.md  pyproject.toml  run_checks.sh
.github/workflows/: ci.yml  release.yml  version-bump.yml
AdventOfCode2019/: AppDelegate.swift  ContentView.swift  DayOfCodeSolution.swift  SceneDelegate.swift  UsefulExtensions.swift
AdventOfCode2019.xcodeproj/: project.pbxproj
AdventOfCode2019/Day1/: DayOneLogic.swift  IntFileIterator.swift
AdventOfCode2019/Day10/: AsteroidField.swift  Day10Logic.swift
AdventOfCode2019/Day11/: Day11Logic.swift  PanelGrid.swift
AdventOfCode2019/Day12/: ByteRadix.swift  Day12Logic.swift  GravitySystem.swift
AdventOfCode2019/Day13/: Day13Logic.swift
AdventOfCode2019/Day14/: Day14Logic.swift  NanoFactory.swift
AdventOfCode2019/Day15/: Day15Logic.swift  RepairBotMapper.swift
AdventOfCode2019/Day16/: Day16Logic.swift  FlawedFrequencyTransmission.swift
AdventOfCode2019/Day17/: Day17Logic.swift  VacuumRobotMapper.swift
AdventOfCode2019/Day18/: KeyMap.swift  (+3 more)
AdventOfCode2019Tests/: AdventOfCode2019Tests.swift  BinaryHeapTests.swift  Day10Tests.swift  Day12Tests.swift  Day14Tests.swift  Day16Tests.swift  Day18Tests.swift  Day1Tests.swift  Day22Tests.swift  Day24Tests.swift  Day2Tests.swift  Day3Tests.swift  Day4Tests.swift  Day5Tests.swift  Day6Tests.swift  Day7Tests.swift  Day8Tests.swift  Day9Tests.swift  ShortestPathTests.swift
AdventOfCode2019UITests/: AdventOfCode2019UITests.swift
examples/: widget_example.py
mcp_base/: __init__.py  exceptions.py  handler.py  metrics.py  observability.py  request_models.py  serializers.py  server.py  test_observability.py  tracing.py  user_agent.py  widget_renderer.py  widget_server.py  widget_views.py  widgets.py
tests/: __init__.py  test_handler.py  test_observability.py  test_server.py  test_user_agent.py  test_widget_renderer.py  test_widget_server.py  test_widget_views.py  test_widgets.py
(+24 files in other folders)
